
  HCAT-296 Hcatalog should be able talk to secure hbase server using hbase delegation token (rohini via toffer)

  HCAT-249 Rework JSON StorageDriver into a JSON SerDe (khorgath via gates)

  HCAT-255 Define hadoop properties on the hcat command line (ctdean via gates)

  HCAT-2 Support nested schema conversion between Hive an Pig (julienledem via hashutosh)

  IMPROVEMENTS
  HCAT-268 Remove remnants of storage drivers. (rohini via gates)

  HCAT-306 Need more end-to-end tests (gates)

  HCAT-130 Documentation improvements (gates and lefty via gates)

  HCAT-266 Upgrade HBase dependency to 0.92 (thw via toffer)

  HCAT-243 HCat e2e tests need to change to not use StorageDrivers (gaets)

  HCAT-256 HCatalog should provide its classpath to tools (gates)

  HCAT-266 Upgrade HBase dependency to 0.92. (thw via toffer)

  HCAT-253 HBase revision manager should configure/drop znodes in the create/drop table meta hooks in the storage handler. (avandana via toffer)

  HCAT-259 Make readFields() and write() in LazyHCatRecord work (gates via khorgath)

  HCAT-194. Better error messages for HCatalog access control errors (julienledem via hashutosh)  
  
  OPTIMIZATIONS

  BUG FIXES
  HCAT-356 Compilation failure due to API change in HIVE-2908 (rohini via gates)

  HCAT-354 hive-hbase-handler jar not getting put in hcat package (gates)

  HCAT-348 HCatUtil::getHiveConf(Configuration) ignores passed-in conf while creating HiveConf (gates)

  HCAT-312 Hcatalog rpms change the ownership of /usr/lib64 to hcat user (gkesavan via gates)

  HCAT-301 Reading from a table created with upper case table name throws error. (rohini via toffer)

  HCAT-302 unable to write to hbase channel. HBaseHCatStorageHandler class not found (rohini via gates)

  HCAT-335 Release notes issues for 0.4 (gates)

  HCAT-338 A couple of typos in the 0.4.0 document (gates)

  HCAT-319 Cleanup of 0.3 mapred classes (khorgath via gates)
